overwriting warning; slight optimizations